--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@
 # Ignore build directory
 build/
 
+# Ignore Testing (temporary) directory
+Testing/
+
 # Ignore CMake-generated files
 CMakeFiles/
 CMakeCache.txt
