--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 4.0.0)
-project(MyApp)
+# cmake_minimum_required(VERSION 4.0.0)
+# project(MyApp)
 
-# Set C++ Standard
-set(CMAKE_CXX_STANDARD 11)
+# # Set C++ Standard
+# set(CMAKE_CXX_STANDARD 11)
 
 # # Include GoogleTest as an external project
 # include(FetchContent)
@@ -12,6 +12,22 @@ set(CMAKE_CXX_STANDARD 11)
 #   URL https://github.com/google/googletest/archive/refs/heads/main.zip
 # )
 # FetchContent_MakeAvailable(googletest)
+
+cmake_minimum_required(VERSION 3.14)
+project(my_project)
+
+# GoogleTest requires at least C++14
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
 # Specify the path to the GoogleTest installation
 set(GTEST_DIR "C:/Tools/googletest/")
