tweaks to CMakeLists.txt in root and test directories. Project configures with cmake -G 'Unix Makefiles' .. but doesn't build due to scope issue with Room objects.

--- a/cpp_adventure/tests/CMakeLists.txt
+++ b/cpp_adventure/tests/CMakeLists.txt
@@ -2,14 +2,16 @@
 add_executable(MyApp_tests test_main.cpp)
 
 # Link MyApp_tests executable with the GoogleTest libraries
-target_link_libraries(MyApp_tests PRIVATE gtest gtest_main)
+target_link_libraries(MyApp_tests GTest::gtest_main)
 
 # Link lib_classes & lib_functions libraries to Room class functionality
-target_link_libraries(MyApp_tests PRIVATE lib_classes)
-target_link_libraries(MyApp_tests PRIVATE lib_functions)
+# target_link_libraries(MyApp_tests PRIVATE lib_classes)
+# target_link_libraries(MyApp_tests PRIVATE lib_functions)
 
 # Specify the path to the GoogleTest header files so compiler can find them.
-target_include_directories(MyApp_tests PRIVATE ${GTEST_DIR}/googletest/include)
+# target_include_directories(MyApp_tests PRIVATE ${GTEST_DIR}/googletest/include)
+include(GoogleTest)
+gtest_discover_tests(MyApp_tests)
 
 # Specify the path to the room.h header file so compiler can find it
 target_include_directories(MyApp_tests PRIVATE ../src/classes)
